--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,14 +22,14 @@ jobs:
 
       - name: Log in to Amazon ECR
         run: |
-          aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 123456789012.dkr.ecr.eu-central-1.amazonaws.com
+          aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 058264302992.dkr.ecr.eu-central-1.amazonaws.com
 
       - name: Build, tag, and push the Docker image
         env:
-          ECR_REPOSITORY: 123456789012.dkr.ecr.eu-central-1.amazonaws.com/picus-app-repo
+          ECR_REPOSITORY: 058264302992.dkr.ecr.eu-central-1.amazonaws.com/picus-app-repo:latest
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $ECR_REPOSITORY:$IMAGE_TAG .
+          docker build -t $ECR_REPOSITORY:$IMAGE_TAG -f src/Dockerfile src/
           docker push $ECR_REPOSITORY:$IMAGE_TAG
 
       - name: Output Image URI
