--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to ECS with CodeDeploy
 
 on:
   workflow_run:
-    workflows: ["Build"]
+    workflows: ["Build and Push to ECR"]
     types:
       - completed
 
