--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,4 +36,5 @@ jobs:
           docker push $ECR_REPOSITORY:latest
 
       - name: Output Image URI
-        run: echo "IMAGE_URI=${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}" >> $GITHUB_ENV
+        id: image_uri
+        run: echo "::set-output name=image_uri::$IMAGE_URI"
