--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,16 +1,18 @@
-name: Deploy to ECS with CodeDeploy
+name: Build and Deploy
 
 on:
-  workflow_run:
-    workflows: ["Build and Push to ECR"]
-    types:
-      - completed
+  push:
+    branches:
+      - main  
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Set up AWS CLI
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -18,10 +20,26 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-central-1  
 
+      - name: Log in to Amazon ECR
+        run: |
+          aws ecr get-login-password --region eu-central-1 | docker login --username AWS --password-stdin 058264302992.dkr.ecr.eu-central-1.amazonaws.com
+
+      - name: Build, tag, and push the Docker image
+        env:
+          ECR_REPOSITORY: 058264302992.dkr.ecr.eu-central-1.amazonaws.com/picus-app-repo
+          IMAGE_TAG: ${{ github.sha }}
+        run: |
+          docker build -t $ECR_REPOSITORY:$IMAGE_TAG -f src/Dockerfile src/
+          docker push $ECR_REPOSITORY:$IMAGE_TAG
+
+          docker tag $ECR_REPOSITORY:$IMAGE_TAG $ECR_REPOSITORY:latest
+          docker push $ECR_REPOSITORY:latest
+
+      - name: Output Image URI
+        run: echo "IMAGE_URI=${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}" >> $GITHUB_ENV
+
       - name: Register new task definition with ECS
         id: task_definition
-        env:
-          IMAGE_URI: ${{ github.event.workflow_run.conclusion.job_outputs.IMAGE_URI }}
         run: |
           TASK_DEFINITION=$(aws ecs describe-task-definition --task-definition picus-task)
           NEW_TASK_DEF=$(echo $TASK_DEFINITION | jq --arg IMAGE "$IMAGE_URI" '.taskDefinition | .containerDefinitions[0].image=$IMAGE | del(.taskDefinitionArn, .revision, .status, .requiresAttributes, .compatibilities, .registeredAt, .registeredBy)')
