--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -1,9 +1,10 @@
 name: Build and Deploy
 
 on:
-  push:
-    branches:
-      - main  
+  workflow_run:
+    workflows: ["Test"]
+    types:
+      - completed
 
 jobs:
   build:
