--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,9 +24,10 @@ jobs:
           source venv/bin/activate
           pip install --no-cache-dir -r src/requirements.txt
 
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=src" >> $GITHUB_ENV
+
       - name: Run tests
-        env:
-          PYTHONPATH: src
         run: |
           source venv/bin/activate
           pytest
